# cellucid-python

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/workflows/: docs-check.yml  pypi-publish.yml  readthedocs.yml
data/: get_data.sh
docs/: HOOKS_DEVELOPMENT.md  Makefile  conf.py  contributing.md  index.md
docs/_static/: custom.css  switcher.json
docs/_static/screenshots/analysis/: README.md
docs/_static/screenshots/benchmarking_performance/: README.md
docs/_static/screenshots/community_annotation/: README.md
docs/_static/screenshots/data_loading/: README.md
docs/_static/screenshots/figure_export/: README.md
docs/_static/screenshots/filtering/: README.md
docs/_static/screenshots/highlighting_selection/: README.md
docs/_static/screenshots/jupyter_hooks/: README.md
docs/_static/screenshots/sessions_sharing/: README.md
docs/_static/screenshots/vector_field_velocity/: README.md
docs/_static/screenshots/web_app/: README.md
docs/_templates/: layout.html
docs/api/: export.md  jupyter.md  server.md  viewers.md
docs/contributing/: python.md  r.md  web_app.md
docs/examples/: index.md  prepare_apidip.ipynb  prepare_he.ipynb  prepare_miller.ipynb
docs/user_guide/: 01_loading_options_overview.ipynb  02_local_demo_tutorial.ipynb  03_browser_file_picker_tutorial.ipynb  04_server_tutorial.ipynb  05_jupyter_tutorial.ipynb  index.md
docs/user_guide/python_package/: index.md
docs/user_guide/python_package/a_landing_pages/: 01_what_is_cellucid_python.md  02_installation.md  03_compatibility_matrix_must_be_explicit.md  04_quick_start_3_levels.md  index.md
docs/user_guide/python_package/api/: adapters.md  export.md  index.md  jupyter.md  server.md  viewers.md
docs/user_guide/python_package/b_concepts_mental_models/: 01_what_is_a_viewer_object.md  02_data_flows.md  03_dataset_identity_and_reproducibility.md  03_state_persistence_and_scope.md  04_dataset_identity_and_reproducibility.md  04_sessions_to_anndata_bridge.md  05_sessions_to_anndata_bridge.md  05_sessions_to_anndata_design.md  06_privacy_security_and_offline_vs_online.md  07_performance_mental_model_and_scaling.md  08_debugging_mental_model_where_to_look.md  index.md
docs/user_guide/python_package/c_data_preparation_api/: 01_prepare_export_overview.md  02_input_requirements_global.md  03_embeddings_and_coordinates.md  04_obs_cell_metadata.md  05_var_gene_metadata.md  06_gene_expression_matrix.md  07_connectivities_knn_graph.md  08_vector_fields_velocity_displacement.md  09_output_format_specification_exports_directory.md  10_performance_tuning_guide_prepare_export.md  11_troubleshooting_prepare_export.md  index.md
docs/user_guide/python_package/d_viewing_apis/: 01_viewing_methods_overview.md  02_the_14_loading_options_breakdown.md  03_choose_your_workflow_decision_tree.md  03_server_mode.md  04_cli_cellucid_serve_quickstart.md  04_notebook_widget_mode.md  05_python_serve_and_serve_anndata_quickstart.md  05_troubleshooting_viewing.md  06_jupyter_show_and_show_anndata_quickstart.md  07_exported_directory_mode_show_and_serve.md  08_anndata_mode_show_anndata_and_serve_anndata.md  09_server_mode_advanced.md  10_notebook_widget_mode_advanced.md  11_viewer_lifecycle_cleanup_ports_and_multiple_viewers.md  12_remote_servers_ssh_tunneling_and_cloud.md  13_security_privacy_cors_and_networking.md  16_faq_viewing.md  (+3 more)
docs/user_guide/r_package/: index.md
docs/user_guide/web_app/: index.md
examples/: jupyter_cellucid_smoketest.ipynb
notebooks/: jupyter_integration_tutorial.ipynb  notebook.ipynb  prepare_suo.ipynb
scripts/dev/: sync_cellucid.sh  sync_cellucid_python.sh
scripts/publishing/: PUBLISHING.md
src/cellucid/: __init__.py  _server_base.py  anndata_adapter.py  anndata_server.py  anndata_session.py  anndata_variations.py  cli.py  jupyter.py  prepare_data.py  repo_to_text.py  server.py  session_bundle.py  session_codecs.py  web_cache.py
tests/: test_anndata_adapter_optional_deps.py  test_cli_detect_data_format.py  test_jupyter_port_sync.py  test_sessions.py  test_web_cache_path_extraction.py  test_web_cache_prefetch_meta.py
(+284 files in other folders)
