[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cellucid"
version = "0.1.0"
description = "Utilities to export data for the 3D UMAP WebGL viewer."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "cellucid contributors" }]
dependencies = [
    "numpy>=1.22",
    "pandas>=1.5",
    "scipy>=1.9",
    "tqdm>=4.66",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: Other/Proprietary License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.optional-dependencies]
analysis = [
    "anndata>=0.10",
    "scanpy>=1.10",
]
docs = [
    "sphinx>=7.2",
    "myst-parser>=2.0",
    "sphinx-autodoc-typehints>=1.25",
    "sphinx_rtd_theme>=1.3",
]

[project.urls]
Repository = "https://github.com/theislab/cellucid-data"

[tool.setuptools.packages.find]
where = ["src"]
