[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cellucid"
version = "0.0.1a2"
description = "Interactive Single-Cell Data Visualization"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Kemal Inecik", email = "k.inecik@gmail.com" },
]
maintainers = [
    { name = "Kemal Inecik", email = "k.inecik@gmail.com" },
]
keywords = [
    "single-cell",
    "visualization",
    "umap",
    "3d",
    "webgl",
    "scRNA-seq",
    "bioinformatics",
    "anndata",
    "jupyter",
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.4",
    "scipy>=1.7",
    "tqdm>=4.45",
    "anndata>=0.8",
    "ipython>=7.23",
    "jupyter-server-proxy>=4.1",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
    "Framework :: Jupyter",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
docs = [
    "sphinx>=7.2,<8.1",
    "myst-nb>=1.1.0",
    "sphinx-autodoc-typehints>=1.25",
    "pydata-sphinx-theme>=0.15",
    "sphinx-design>=0.5",
    "sphinx-copybutton>=0.5",
]

[project.scripts]
# Main unified CLI entry point
cellucid = "cellucid.cli:main"

[project.urls]
Homepage = "https://github.com/theislab/cellucid-python"
Repository = "https://github.com/theislab/cellucid-python"
Documentation = "https://cellucid.readthedocs.io"
Issues = "https://github.com/theislab/cellucid-python/issues"
Changelog = "https://github.com/theislab/cellucid-python/blob/main/CHANGELOG.md"
Contributing = "https://github.com/theislab/cellucid-python/blob/main/CONTRIBUTING.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cellucid = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["cellucid"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/cellucid"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
